# PSET4

./: CMakeLists.txt  readme.md
client/: grpc_client.cpp  main.cpp  mainwindow.cpp  mainwindow.h
server/: main.cpp  ocr_server.cpp
